force-app/src/objects/EventApi__Room__c.object
<CustomObject>
    <description>Track the Rooms available for the Venues that host your Events and book them for Event Sessions.</description>
    <fields>
        <fullName>EventApi__Capacity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** Required ** The maximum persons the room can accommodate at one time is used as the default inventory level for any Event Sessions booked to the Room.</description>
        <inlineHelpText>** Required ** The maximum persons the room can accommodate at one time is used as the default inventory level for any Event Sessions booked to the Room.</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Optional description for the Room used to provide users context when booking Event Sessions for an Event that has access to the Room.</description>
        <inlineHelpText>Optional description for the Room used to provide users context when booking Event Sessions for an Event that has access to the Room.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Disabled_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Room is considered to be wheelchair accessible. Defaults unchecked.</description>
        <inlineHelpText>When checked the Room is considered to be wheelchair accessible. Defaults unchecked.</inlineHelpText>
        <label>Disabled Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Drops__c</fullName>
        <description>The number of network access ports available in the Room.</description>
        <inlineHelpText>The number of network access ports available in the Room.</inlineHelpText>
        <label>Drops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to related Event.</description>
        <inlineHelpText>** Required ** Link to related Event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Layout__c</fullName>
        <description>** Required ** Select the option that best describes the Layout of the Room.</description>
        <inlineHelpText>** Required ** Select the option that best describes the Layout of the Room.</inlineHelpText>
        <label>Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banquet</fullName>
                    <color>#0B6FCE</color>
                    <label>Banquet</label>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                    <color>#78C953</color>
                    <label>Classroom</label>
                </value>
                <value>
                    <fullName>Conference</fullName>
                    <color>#E27001</color>
                    <default>true</default>
                    <label>Conference</label>
                </value>
                <value>
                    <fullName>Field</fullName>
                    <color>#A845DC</color>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>Hollow</fullName>
                    <color>#F3D904</color>
                    <label>Hollow</label>
                </value>
                <value>
                    <fullName>Other Indoor</fullName>
                    <color>#A53711</color>
                    <label>Other Indoor</label>
                </value>
                <value>
                    <fullName>Other Outdoor</fullName>
                    <color>#66E9BD</color>
                    <label>Other Outdoor</label>
                </value>
                <value>
                    <fullName>Reception</fullName>
                    <color>#0B24BE</color>
                    <label>Reception</label>
                </value>
                <value>
                    <fullName>Stadium</fullName>
                    <color>#419249</color>
                    <label>Stadium</label>
                </value>
                <value>
                    <fullName>Tent</fullName>
                    <color>#B6E32E</color>
                    <label>Tent</label>
                </value>
                <value>
                    <fullName>Theater</fullName>
                    <color>#641CCF</color>
                    <label>Theater</label>
                </value>
                <value>
                    <fullName>U-Shape</fullName>
                    <color>#F96FB7</color>
                    <label>U-Shape</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Location_Description__c</fullName>
        <description>Enter a description that would be helpful for Attendees wanting to locate the Room.</description>
        <inlineHelpText>Enter a description that would be helpful for Attendees wanting to locate the Room.</inlineHelpText>
        <label>Location Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Location_Name__c</fullName>
        <description>Location name defaults to the name of the Room but can be modified to match the Venue&apos;s internal room code to assist with planning and bookings.</description>
        <inlineHelpText>Location name defaults to the name of the Room but can be modified to match the Venue&apos;s internal room code to assist with planning and bookings.</inlineHelpText>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Minimum_Rental_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The minimum fee amount required by the Venue to rent the Room.</description>
        <inlineHelpText>The minimum fee amount required by the Venue to rent the Room.</inlineHelpText>
        <label>Minimum Rental Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Podium__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Room will be considered to include a Podium.</description>
        <inlineHelpText>When checked, the Room will be considered to include a Podium.</inlineHelpText>
        <label>Podium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Power_Outlets__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of three-pronged power outlets available for use in the Room. Defaults to 1.</description>
        <inlineHelpText>The number of three-pronged power outlets available for use in the Room. Defaults to 1.</inlineHelpText>
        <label>Power Outlets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Rental_Rate_Basis__c</fullName>
        <description>The basis used to calculate the expense of renting the Room.</description>
        <inlineHelpText>The basis used to calculate the expense of renting the Room.</inlineHelpText>
        <label>Rental Rate Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Rental_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Rental fee rate for the Room.</description>
        <inlineHelpText>Rental fee rate for the Room.</inlineHelpText>
        <label>Rental Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Square_Feet__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The square footage (size) for the Room.</description>
        <inlineHelpText>The square footage (size) for the Room.</inlineHelpText>
        <label>Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Room is considered to have a permanent stage or similar stage/platform like structure.</description>
        <inlineHelpText>When checked, the Room is considered to have a permanent stage or similar stage/platform like structure.</inlineHelpText>
        <label>Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Target_Capacity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The target or ideal capacity for the Room is usually slightly less than the &quot;Capacity&quot;.</description>
        <inlineHelpText>The target or ideal capacity for the Room is usually slightly less than the &quot;Capacity&quot;.</inlineHelpText>
        <label>Target Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the related Venue for the Room.</description>
        <inlineHelpText>** Required ** Link to the related Venue for the Room.</inlineHelpText>
        <label>Venue</label>
        <referenceTo>EventApi__Venue__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Wireless_Internet__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the Room is considered as having wireless internet (WiFi) accessibility.</description>
        <inlineHelpText>When checked, the Room is considered as having wireless internet (WiFi) accessibility.</inlineHelpText>
        <label>Wireless Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guide__c</fullName>
        <description>Fetching Guide Id from EventApi__Event__c object</description>
        <formula>EventApi__Event__r.MobileApi__Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Location_Id__c</fullName>
        <externalId>true</externalId>
        <label>Location ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>